# Practical_applications_of_generative_AI

./: .gitattributes  .gitignore  README.md  pyproject.toml
семинар_1/starter/: .env.example  1_hello_api_openai.py  2_count_tokens.py  3_experiment_temperature.py  4_prompt_experiment.py  5_headline_scorer.py  README.md  headlines.csv  headlines_scored.csv  hello_api_gemini.py  llm_client.py  requirements.txt  setup_env.py
семинар_2/: analyze.py  schema.py  домашнее_задание.md
семинар_2/HW/: analysis.py  applications.csv  applications.json  cross_tab.csv  generator.py  report.md  stress_test.py  выводы.md
семинар_2/starter/: 1_prompt_lab.py  2_few_shot_demo.py  3_persona_gen.py  personas.json  report.md  requirements.txt  schema.py
семинар_3/HW/: count_tokens.py  pipeline.py  prompts.py  schema.py  выводы.md
семинар_3/starter/: 2_extract_participants.py  aspects.json  aspects_discovered.json  baseline_manual.json  judge_report.json  multi_doc.csv  multi_doc_summary.json  participants.json  prompts.py  summary.json  summary_hierarchical.json
семинар_4/HW/: bm25_cache.json  bm25_cache_fixed.json  chunks.json  chunks_fixed.json  eval.py  faiss.index  faiss_fixed.index  pipeline.py  pipeline_fixed.py  requirements.txt  выводы.md
семинар_4/starter/: bm25_cache.json  chunks.json  eval_faiss.py  faiss.index  pipeline.py  pipeline_bm25.py  pipeline_faiss.py  requirements.txt
семинар_5/HW/: agent.py  eval.py  eval_results.json  schemas.py  tools.py  выводы.md
семинар_6/HW/: eval_pwc.py  (+11 more)
финальный_проект/: .env.example  README.md  requirements.txt  отчёт.md
(+101 files in other folders)
