[project]
name = "gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "httpx>=0.27",
    "matplotlib>=3.8",
    "openai>=1.30",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
]
